--- a/src/View/User/user_confirm.html.twig
+++ b/src/View/User/user_confirm.html.twig
@@ -25,7 +25,7 @@
 
         <div class="row text-center">
             <div class="col-12 text-center">
-                <a class="btn btn-dark text-white" href="/">Let's go to capture the flags <i class="fa fa-key"></i></a>
+                <a class="btn btn-dark text-white" href="/">Shall we play a game? <i class="fa fa-key"></i></a>
             </div>
         </div>
     </div>
