hover red on buttons

--- a/src/View/Admin/challenge.html.twig
+++ b/src/View/Admin/challenge.html.twig
@@ -90,7 +90,7 @@
                     </div>
                     <div class="row d-flex justify-content-start">
                         <div class="form-group">
-                            <button type="submit" name="createChallenge" class="align-self-center btn btn-dark text-white">Create the challenge <i class="fa fa-save"></i></button>
+                            <button type="submit" name="createChallenge" class="align-self-center btn btn-dark text-white hover-red">Create the challenge <i class="fa fa-save"></i></button>
                         </div>
                     </div>
                 </form>
