--- a/src/View/Admin/challenge_edit.html.twig
+++ b/src/View/Admin/challenge_edit.html.twig
@@ -75,7 +75,7 @@
                     </div>
                     <div class="row d-flex justify-content-start">
                         <div class="form-group">
-                            <button type="submit" name="saveChallenge" class="align-self-center btn btn-dark text-white">Save your challenge <i class="fa fa-save"></i></button>
+                            <button type="submit" name="saveChallenge" class="align-self-center btn btn-dark text-white hover-red">Save your challenge <i class="fa fa-save"></i></button>
                             {% if not onContest.challenge_id %}
                                 <button type="button" name="deleteChallenge" class="align-self-center btn btn-danger text-white" data-toggle="modal" data-target="#confirmDeletion">Delete <i class="fa fa-trash"></i></button>
                             {% endif %}
