--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -64,7 +64,7 @@
                         <div class="row d-flex ">
                             <div class="form-group">
                                 <input type="hidden" id="order-of-challenges" value="" name="orderOfChallenges">
-                                <button type="submit" name="saveContest" class="align-self-center btn btn-dark text-white">Save your contest <i class="fa fa-save"></i></button>
+                                <button type="submit" name="saveContest" class="align-self-center btn btn-dark text-white hover-red">Save your contest <i class="fa fa-save"></i></button>
                                 <button type="button" name="deleteContest" class="align-self-center btn btn-danger text-white" data-toggle="modal" data-target="#confirmDeletion">Delete <i class="fa fa-trash"></i></button>
                             </div>
                         </div>
