--- a/src/View/Admin/specialty.html.twig
+++ b/src/View/Admin/specialty.html.twig
@@ -25,7 +25,7 @@
                         <p class="text-white">{{ errors.error_title }}</p>
                     </div>
                     <div class="row">
-                        <button class="btn specialty text-white" type="submit">Add Specialty</button>
+                        <button class="btn specialty text-white hover-red" type="submit">Add Specialty</button>
                     </div>
                 </form>
             </div>
