--- a/src/View/Admin/type.html.twig
+++ b/src/View/Admin/type.html.twig
@@ -20,7 +20,7 @@
                             <div class="{% if (type_exist == 0 ) %} hide {% endif %} text-red ">This type already exist</div>
                         </div>
                         <p class="text-white">{{ errors.error_title }}</p>
-                    <button class="btn specialty text-white " type="submit" class="btn btn-primary">Add Type</button>
+                    <button class="btn specialty text-white hover-red" type="submit" class="btn btn-primary">Add Type</button>
                 </form>
             </div>
             <div class="col-12 col-md-4 offset-md-4">
