--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -31,7 +31,7 @@
         </div>
         {% if have_ended %}
         <div class="text-center mt-4">
-            <a href="/joshua/oldcontests" class="btn btn-dark">See old contests <span class="badge bg-light text-dark">{{ nb_ended }}</span></a>
+            <a href="/joshua/oldcontests" class="btn btn-dark hover-red">See old contests <span class="badge bg-light text-dark">{{ nb_ended }}</span></a>
         </div>
         {% endif %}
     </div>
