--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -116,12 +116,12 @@
                 </div>
                 <div class="row d-flex justify-content-start">
                     <div class="form-group">
-                        <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white">Next step (add challenges) <i class="fa fa-arrow-right"></i></button>
+                        <button type="submit" name="createFullContest" class="align-self-center btn btn-dark text-white hover-red">Next step (add challenges) <i class="fa fa-arrow-right"></i></button>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-start">
                     <div class="form-group">
-                        <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white">Create a blank contest <i class="fa fa-save"></i></button>
+                        <button type="submit" name="createBlankContest" class="align-self-center btn btn-dark text-white hover-red">Create a blank contest <i class="fa fa-save"></i></button>
                     </div>
                 </div>
             </form>
