--- a/src/View/User/register.html.twig
+++ b/src/View/User/register.html.twig
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 align-self-center">
                     <div class="form-group ">
-                        <button type="submit" name="registerUser" class="align-self-center btn btn-dark text-white">Register <i class="fa fa-save"></i></button>
+                        <button type="submit" name="registerUser" class="align-self-center btn btn-dark text-white hover-red">Register <i class="fa fa-save"></i></button>
                     </div>
                 </div>
             </div>
