--- a/src/View/User/user_edit.html.twig
+++ b/src/View/User/user_edit.html.twig
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-xs-12 col-md-6 align-self-center">
                     <div class="form-group ">
-                        <button type="submit" name="updateUser" class="align-self-center btn btn-dark text-white">Save <i class="fa fa-save"></i></button>
+                        <button type="submit" name="updateUser" class="align-self-center btn btn-dark text-white hover-red">Save <i class="fa fa-save"></i></button>
                     </div>
                 </div>
             </div>
