--- a/src/View/User/user_profile.html.twig
+++ b/src/View/User/user_profile.html.twig
@@ -75,7 +75,7 @@
                             <td></td>
                         </tr>
                     </table>
-                    <a class="btn btn-dark" href="/user/edit">EDIT YOUR PROFILE <i class="fa fa-edit"></i></a>
+                    <a class="btn btn-dark hover-red" href="/user/edit">EDIT YOUR PROFILE <i class="fa fa-edit"></i></a>
                 </div>
             </div>
 
