Add number of player in console

--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -93,6 +93,9 @@
     animation: flashing-red-white 1s infinite;
 }
 
+.players-number {
+    padding-top : 20px;
+}
 
 @media screen and (max-width: 800px) {
     .console {
