--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -3,14 +3,14 @@
 {% block title %}Contest editor{% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container-admin">
         <div class="row">
             <div class="col-12 text-center">
                 <h1>Contest editor</h1>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-4">
                 <div class="col-12">
                     <form action="" method="post">
                         <div class="pb-3 text-left">
@@ -90,7 +90,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4">
                 <div class="col-12">
                     <div class="pb-3 text-left">
                         <h2>Add challenges</h2>
@@ -107,7 +107,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-3">
+            <div class="col-12 col-md-4">
                 <div class="col-12">
                     <div class="pb-3 text-left">
                         <h2>Order challenges</h2>
