--- a/src/View/Components/_footer.html.twig
+++ b/src/View/Components/_footer.html.twig
@@ -21,7 +21,7 @@
         </div>
     </div>
 
-    <p class="text-center text-white"><a href="https://wildcodeschool.com/" class="link-footer">Wild Code School</a>
+    <p class="text-center text-white"><a href="https://wildcodeschool.com/" target="_blank" class="link-footer">Wild Code School</a>
         - <a href="/joshua/about" class="link-footer">About Joshua</a></p>
 
 </footer>
