--- a/src/View/Home/old_contests.html.twig
+++ b/src/View/Home/old_contests.html.twig
@@ -15,7 +15,7 @@
                         </div>
                         <div class="card-footer">
                             <p class="float-left margin-duration">Duration : {{ contest.formatted_duration.hours }}h {% if contest.formatted_duration.minutes != 0 %}{{ contest.formatted_duration.minutes }}m{% endif %}</p>
-                            <a href="/contest/results/{{ contest.id}}"><button class="btn btn-dark float-right">Ranking</button></a>
+                            <a href="/contest/results/{{ contest.id}}"><button class="btn btn-dark float-right hover-red">Ranking</button></a>
                         </div>
                     </div>
                 </div>
