--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -55,7 +55,7 @@
                         <a class="btn btn-dark" href="#" id="edit-contest-btn"><i class="fas fa-edit"></i> Edit</a><br>
                     </div>
                     {% if active_contests %}
-                    <span class="text-red">Contests on fire</span>
+                    <span class="text-red bold">Contests on fire</span>
                     {% endif %}
                     <p>
                         {% for active_contest in active_contests %}
@@ -80,7 +80,7 @@
                     <div class="form-group">
                         <a class="btn btn-dark" href="/admin/manageusers"><i class="fas fa-user-cog"></i> Manage users</a><br>
                     </div>
-                    <p class="text-red bold">Last registered user :</p>
+                    <p class="text-red bold">Last registered user</p>
                     <ul class="pl-0">
                     {% for last_register in last_registers %}
                         <li><span class="bold">- {{ last_register.pseudo }}</span><br><small>on {{ last_register.created_on }}</small></li>
@@ -116,16 +116,17 @@
             </a>
             <div class="story col-12 col-md-5" >
                 <h2>Follow what's happening ... </h2>
-                <div id="story">
+                <div id="story{{ active_contest.id }}">
                     {% include 'Components/_console.html.twig' %}
                 </div>
             </div>
             <div class="timer-column col-12 col-md-3">
                 <div id="timer{{ active_contest.id }}" class="timer"></div>
+                <div id="players{{ active_contest.id }}" class="text-left"></div>
             </div>
             <div class="ranking-console col-12 col-md-4">
                 <img src="/assets/images/podium.svg" width="30"><br> <b>Ranking on fire</b>
-                <div id="ranking">
+                <div id="ranking{{ active_contest.id }}">
                     {% include 'Components/_ranking.html.twig' %}
                 </div>
             </div>
