--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -116,7 +116,7 @@
             </a>
             <div class="story col-12 col-md-5" >
                 <h2>Follow what's happening ... </h2>
-                <div id="story{{ active_contest.id }}">
+                <div id="story{{ active_contest.id }}" class="story-teller">
                     {% include 'Components/_console.html.twig' %}
                 </div>
             </div>
