--- a/src/View/Components/_number_players.html.twig
+++ b/src/View/Components/_number_players.html.twig
@@ -1,5 +1,5 @@
 <br>
 <span class="players-number">
     {{ players_count }} players<br>
-    <small>in this contest</small>
+    <small>are running</small>
 </span>
