--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="col-12 col-md-3 text-white">
-                <img src="https://avatars.githubusercontent.com/{{ github }}?s=75" class="img-thumbnail rounded-circle"><br>
+                <img src="https://avatars.githubusercontent.com/{{ github }}?s=75" class="img-thumbnail rounded-circle thumbnail-size"><br>
                 <small class="text-white">You have left :</small><br>
                 <div id="contest-timer" class="timer"></div>
                 <div class="steper">
